--- a/app/src/main/res/layout/resto_main_card.xml
+++ b/app/src/main/res/layout/resto_main_card.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="200dp"
+    android:layout_width="180dp"
     android:layout_height="160dp">
 
     <androidx.cardview.widget.CardView
@@ -34,7 +34,7 @@
     </androidx.cardview.widget.CardView>
 
     <TextView
-        android:id="@+id/textView20"
+        android:id="@+id/resto_maiN_restoName"
         style="@style/card_text.big"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -53,15 +53,15 @@
         android:layout_height="12dp"
         android:layout_marginTop="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/textView20"
+        app:layout_constraintEnd_toEndOf="@+id/resto_maiN_restoName"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/textView20"
-        app:layout_constraintTop_toBottomOf="@+id/textView20"
+        app:layout_constraintStart_toStartOf="@+id/resto_maiN_restoName"
+        app:layout_constraintTop_toBottomOf="@+id/resto_maiN_restoName"
         app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/ic_star" />
 
     <TextView
-        android:id="@+id/textView23"
+        android:id="@+id/resto_main_rating"
         style="@style/card_text.medium"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -86,7 +86,7 @@
         app:srcCompat="@drawable/ic_location" />
 
     <TextView
-        android:id="@+id/textView24"
+        android:id="@+id/resto_main_address"
         style="@style/card_text.medium"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
