--- a/app/src/main/res/layout/activity_choose_location.xml
+++ b/app/src/main/res/layout/activity_choose_location.xml
@@ -19,7 +19,7 @@
 
         <TextView
             android:id="@+id/textView20"
-            style="@style/page_heading"
+            style="@style/page_heading.medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Pilih Lokasi"
