--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -18,7 +18,7 @@
         app:layout_constraintVertical_bias="0.0">
 
         <TextView
-            style="@style/page_heading"
+            style="@style/page_heading.medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Masuk"
