--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="purple_200">#289FDC</color>
     <color name="purple_500">#289FDC</color>
     <color name="purple_700">#289FDC</color>
-    <color name="teal_200">#FF03DAC5</color>
+    <color name="teal_200">#289FDC</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
