--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -19,6 +19,10 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="Theme.ReviewJujur.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="Theme.ReviewJujur.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
     <style name="page_heading">
         <item name="fontFamily">@font/montserrat_medium</item>
         <item name="android:textColor">@color/white</item>
@@ -77,6 +81,12 @@
 
     <style name="card_text">
         <item name="fontFamily">@font/montserrat_semibold</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="content">
+        <item name="android:textSize">11sp</item>
+        <item name="fontFamily">@font/montserrat_regular</item>
         <item name="android:textColor">@color/black</item>
     </style>
 
