--- a/app/src/main/res/layout/activity_new_password.xml
+++ b/app/src/main/res/layout/activity_new_password.xml
@@ -22,7 +22,7 @@
             style="@style/page_heading.medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Kata Sandi Baru"
+            android:text="Password Baru"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -30,14 +30,13 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <EditText
-        android:id="@+id/editTextTextPassword2"
+        android:id="@+id/new_password_password"
         style="@style/form"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="200dp"
+        android:layout_marginTop="100dp"
         android:background="@drawable/et_shadow"
         android:ems="10"
-        android:hint="********"
         android:inputType="textPassword"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -51,28 +50,27 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
-        android:text="Kata Sandi Baru"
-        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword2"
-        app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword2"
+        android:text="Password Baru"
+        app:layout_constraintBottom_toTopOf="@+id/new_password_password"
+        app:layout_constraintEnd_toEndOf="@+id/new_password_password"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword2"
+        app:layout_constraintStart_toStartOf="@+id/new_password_password"
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout5"
         app:layout_constraintVertical_bias="1.0" />
 
     <EditText
-        android:id="@+id/editTextTextPassword3"
+        android:id="@+id/new_password_confirmation"
         style="@style/form"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:background="@drawable/et_shadow"
         android:ems="10"
-        android:hint="*******"
         android:inputType="textPassword"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2"
+        app:layout_constraintTop_toBottomOf="@+id/new_password_password"
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
@@ -81,24 +79,30 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
-        android:text="Ulangi Kata Sandi"
-        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword3"
-        app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword3"
+        android:text="Ulangi Password"
+        app:layout_constraintBottom_toTopOf="@+id/new_password_confirmation"
+        app:layout_constraintEnd_toEndOf="@+id/new_password_confirmation"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword3"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2"
+        app:layout_constraintStart_toStartOf="@+id/new_password_confirmation"
+        app:layout_constraintTop_toBottomOf="@+id/new_password_password"
         app:layout_constraintVertical_bias="1.0" />
 
     <androidx.cardview.widget.CardView
-        android:layout_width="120dp"
+        android:id="@+id/new_password_save"
+        android:layout_width="100dp"
         android:layout_height="40dp"
         android:layout_marginTop="50dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:foreground="@drawable/ripple"
         app:cardBackgroundColor="@color/primary"
+        app:cardCornerRadius="5dp"
+        app:cardElevation="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword3"
+        app:layout_constraintEnd_toEndOf="@+id/new_password_confirmation"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword3"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword3"
+        app:layout_constraintStart_toStartOf="@+id/new_password_confirmation"
+        app:layout_constraintTop_toBottomOf="@+id/new_password_confirmation"
         app:layout_constraintVertical_bias="0.0">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -110,7 +114,7 @@
                 style="@style/button_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Konfirmasi"
+                android:text="Simpan"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
