--- a/app/src/main/res/layout/activity_business_details.xml
+++ b/app/src/main/res/layout/activity_business_details.xml
@@ -32,7 +32,11 @@
             android:id="@+id/business_details_back"
             android:layout_width="60dp"
             android:layout_height="60dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:foreground="@drawable/ripple"
             app:cardBackgroundColor="@color/primary"
+            app:cardCornerRadius="60dp"
             app:cardElevation="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
