--- a/app/src/main/res/layout/activity_choose_location.xml
+++ b/app/src/main/res/layout/activity_choose_location.xml
@@ -34,7 +34,9 @@
             android:layout_height="0dp"
             android:clickable="true"
             android:focusable="true"
+            android:foreground="@drawable/ripple"
             app:cardBackgroundColor="@color/primary"
+            app:cardCornerRadius="60dp"
             app:cardElevation="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -63,7 +65,7 @@
         android:id="@+id/choose_location_province"
         style="@style/form"
         android:layout_width="0dp"
-        android:layout_height="40dp"
+        android:layout_height="50dp"
         android:layout_marginStart="40dp"
         android:layout_marginTop="200dp"
         android:layout_marginEnd="40dp"
@@ -92,7 +94,7 @@
         android:id="@+id/choose_location_location"
         style="@style/form"
         android:layout_width="0dp"
-        android:layout_height="40dp"
+        android:layout_height="50dp"
         android:layout_marginTop="50dp"
         android:background="@drawable/et_shadow"
         app:layout_constraintBottom_toBottomOf="parent"
