--- a/app/src/main/res/layout/activity_create_review.xml
+++ b/app/src/main/res/layout/activity_create_review.xml
@@ -34,7 +34,9 @@
             android:layout_height="60dp"
             android:clickable="true"
             android:focusable="true"
+            android:foreground="@drawable/ripple"
             app:cardBackgroundColor="@color/primary"
+            app:cardCornerRadius="60dp"
             app:cardElevation="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
