--- a/app/src/main/res/layout/activity_request_verification_code.xml
+++ b/app/src/main/res/layout/activity_request_verification_code.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".authentication.CodeVerificationActivity">
+    tools:context=".authentication.RequestVerificationCodeActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintLayout4"
+        android:id="@+id/constraintLayout3"
         android:layout_width="0dp"
         android:layout_height="60dp"
         android:background="@color/primary"
@@ -18,18 +18,18 @@
         app:layout_constraintVertical_bias="0.0">
 
         <TextView
-            android:id="@+id/textView12"
+            android:id="@+id/request_code_title"
             style="@style/page_heading.medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Verifikasi Kode"
+            android:text="-"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/code_verification_back"
+            android:id="@+id/forgot_password_back"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:clickable="true"
@@ -48,7 +48,7 @@
                 android:layout_height="match_parent">
 
                 <ImageView
-                    android:id="@+id/imageView20"
+                    android:id="@+id/imageView24"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -61,63 +61,50 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <EditText
-        android:id="@+id/code_verification_code"
+        android:id="@+id/request_verification_code_phone"
         style="@style/form"
-        android:layout_width="220dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="200dp"
         android:background="@drawable/et_shadow"
-        android:ems="6"
-        android:hint="******"
+        android:ems="10"
+        android:hint="628123456789"
         android:inputType="number"
-        android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout4"
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
-        android:id="@+id/textView14"
+        android:id="@+id/textView11"
         style="@style/form_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
-        android:text="Kode Verifikasi"
-        app:layout_constraintBottom_toTopOf="@+id/code_verification_code"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout4"
+        android:text="Nomor WhatsApp"
+        app:layout_constraintBottom_toTopOf="@+id/request_verification_code_phone"
+        app:layout_constraintEnd_toEndOf="@+id/request_verification_code_phone"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/request_verification_code_phone"
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"
         app:layout_constraintVertical_bias="1.0" />
 
-    <TextView
-        android:id="@+id/textView15"
-        style="@style/content"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="Masukkan kode yang dikirimkan\nke WhatsApp"
-        android:textAlignment="center"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/code_verification_code"
-        app:layout_constraintVertical_bias="0.0" />
-
     <androidx.cardview.widget.CardView
-        android:id="@+id/verify_verify"
-        android:layout_width="100dp"
+        android:id="@+id/request_verification_send_code"
+        android:layout_width="120dp"
         android:layout_height="40dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="50dp"
         android:clickable="true"
         android:focusable="true"
         android:foreground="@drawable/ripple"
         app:cardBackgroundColor="@color/primary"
         app:cardCornerRadius="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/code_verification_code"
+        app:layout_constraintEnd_toEndOf="@+id/request_verification_code_phone"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/request_verification_code_phone"
+        app:layout_constraintTop_toBottomOf="@+id/request_verification_code_phone"
         app:layout_constraintVertical_bias="0.0">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -125,15 +112,16 @@
             android:layout_height="match_parent">
 
             <TextView
-                android:id="@+id/textView17"
+                android:id="@+id/textView13"
                 style="@style/button_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Verifikasi"
+                android:text="Kirim Kode"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
