--- a/app/src/main/res/layout/business_review_card.xml
+++ b/app/src/main/res/layout/business_review_card.xml
@@ -53,6 +53,30 @@
                 app:layout_constraintStart_toStartOf="@+id/business_review_card_text"
                 app:layout_constraintTop_toBottomOf="@+id/business_review_card_text"
                 app:layout_constraintVertical_bias="0.0" />
+
+            <ImageView
+                android:id="@+id/imageView25"
+                android:layout_width="15dp"
+                android:layout_height="15dp"
+                android:layout_marginEnd="20dp"
+                app:layout_constraintBottom_toBottomOf="@+id/business_review_card_created_at"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toEndOf="@+id/business_review_card_created_at"
+                app:layout_constraintTop_toTopOf="@+id/business_review_card_created_at"
+                app:srcCompat="@drawable/ic_star_orange" />
+
+            <TextView
+                android:id="@+id/business_review_card_score"
+                style="@style/content"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="5"
+                app:layout_constraintBottom_toBottomOf="@+id/imageView25"
+                app:layout_constraintEnd_toEndOf="@+id/business_review_card_text"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toEndOf="@+id/imageView25"
+                app:layout_constraintTop_toTopOf="@+id/imageView25" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
